K8S/Investment-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investment-service
spec:
  selector:
    matchLabels:
      app: investment-service
  replicas: 1
  template:
    metadata:
      labels:
        app: investment-service
    spec:
      containers:
        - name: investment-service
          image: venenium/investmentservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env:   # Setting Environmental Variables
            - name: DB_HOST   # Setting Database host address
              value: investment-database
            - name: DB_NAME  # Setting Database name
              value: investments
            - name: DB_USERNAME  # Setting Database username
              value: root
            - name: DB_PASSWORD # Setting Database password
              value: root
