K8S/deployment-StatisticsService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-service
spec:
  selector:
    matchLabels:
      app: statistics-service
  replicas: 1
  template:
    metadata:
      labels:
        app: statistics-service
    spec:
      containers:
        - name: statistics-service
          image: venenium/statisticsservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env:   # Setting Environmental Variables
            - name: DB_HOST   # Setting Database host address
              value: statistic-database
            - name: DB_NAME  # Setting Database name
              value: investments
            - name: DB_USERNAME  # Setting Database username
              value: root
            - name: DB_PASSWORD # Setting Database password
              value: root
