K8S/deployment-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  selector:
    matchLabels:
      app: users-service
  replicas: 1
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: venenium/userservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env:   # Setting Environmental Variables
            - name: DB_HOST   # Setting Database host address
              value: user-database
            - name: DB_NAME  # Setting Database name
              value: users
            - name: DB_USERNAME  # Setting Database username
              value: root
            - name: DB_PASSWORD # Setting Database password
              value: root
