K8S/investment-database.yaml
# Define a 'Service' To Expose MySQL to Other Services
apiVersion: v1
kind: Service
metadata:
  name: investment-database
  labels:
    app: investment-database
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: investment-database
    tier: database
  clusterIP: None # DNS is used, so clusterIP is not needed

---
# Deployment specification begins here
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investment-database
  labels:
    app: investment-database
    tier: database
spec:
  selector: # mySQL Pod Should contain same labels
    matchLabels:
      app: investment-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: investment-database
        tier: database
    spec:
      containers:
        - name: investment-database
          image: mysql:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3306
              name: investment-db
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistance-storage
      volumes:
        - name: mysql-persistance-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
