K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - http:
     paths:
    - path: /investment-service/*
      pathType: ImplementationSpecific
      backend:
        service:
          name: Investment-service
          port:
            number: 9001
